...

            <RadioGroup
                android:id="@+id/radiogroup_dialog_network_task_edit_accesstype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                android:breakStrategy="simple"
                android:maxWidth="@dimen/textview_dialog_network_task_edit_label_max_width"
                android:labelFor="@id/edittext_dialog_network_task_edit_address"
                android:text=""
                tools:ignore="LabelFor" />
...
                    android:layout_width="@dimen/edittext_dialog_network_task_edit_address_width"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine|textNoSuggestions"
                    android:scrollHorizontally="false"
...
                android:breakStrategy="simple"
                android:maxWidth="@dimen/textview_dialog_network_task_edit_label_max_width"
                android:labelFor="@id/edittext_dialog_network_task_edit_port"
                android:text=""
                tools:ignore="LabelFor" />
...
                android:breakStrategy="simple"
                android:maxWidth="@dimen/textview_dialog_network_task_edit_label_max_width"
                android:labelFor="@id/edittext_dialog_network_task_edit_interval"
                android:text="@string/label_dialog_network_task_edit_interval" />

...
                android:breakStrategy="simple"
                android:maxWidth="@dimen/textview_dialog_network_task_edit_label_max_width"
                android:labelFor="@id/edittext_dialog_network_task_edit_ping_count"
                android:text="@string/label_dialog_network_task_edit_ping_count" />

...
                android:breakStrategy="simple"
                android:maxWidth="@dimen/textview_dialog_network_task_edit_label_max_width"
                android:labelFor="@id/edittext_dialog_network_task_edit_connect_count"
                android:text="@string/label_dialog_network_task_edit_connect_count" />

...
                android:breakStrategy="simple"
                android:maxWidth="@dimen/textview_dialog_network_task_edit_label_max_width"
                android:labelFor="@id/edittext_dialog_network_task_edit_ping_package_size"
                android:text="@string/label_dialog_network_task_edit_ping_package_size" />

...

                    <RadioButton
                        android:id="@+id/radiobutton_dialog_network_task_edit_snmp_version_v1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/edittext_dialog_network_task_edit_snmp_community"
                    style="@style/EditTextTheme"
                    android:layout_width="@dimen/edittext_dialog_network_task_edit_snmp_community_width"
...

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_dialog_network_task_edit_use_default_headers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/textview_dialog_network_task_edit_use_default_headers_on_off"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

            <LinearLayout
                android:id="@+id/linearlayout_dialog_network_task_edit_certificate_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                android:layout_marginTop="@dimen/textview_dialog_network_task_edit_stop_on_success_label_margin_top"
                android:textStyle="bold"
                android:layout_row="15"
                android:layout_column="0"
                android:ellipsize="none"
...

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_dialog_network_task_edit_stop_on_success"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/textview_dialog_network_task_edit_stop_on_success_on_off"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_dialog_network_task_edit_only_wifi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/textview_dialog_network_task_edit_only_wifi_on_off"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_dialog_network_task_edit_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/textview_dialog_network_task_edit_notification_on_off"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_dialog_network_task_edit_high_prio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/textview_dialog_network_task_edit_high_prio_on_off"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

            <ImageView
                android:id="@+id/imageview_dialog_network_task_edit_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
