...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listview_activity_main_network_tasks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:descendantFocusability="afterDescendants"
                android:nestedScrollingEnabled="false"
                android:overScrollMode="never" />

            <ImageView
                android:id="@+id/imageview_activity_main_network_task_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/imageview_activity_main_add_padding_bottom"
                android:clickable="true"
                android:focusable="false"
                android:focusableInTouchMode="false"
...
