...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/linearlayout_dialog_certificate_settings_ignore_ssl_error_onoff_margin_top"
                android:orientation="horizontal">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_dialog_certificate_settings_ignore_ssl_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/switch_dialog_certificate_settings_padding_top"
                    android:paddingBottom="@dimen/switch_dialog_certificate_settings_padding_bottom"
                    android:minHeight="@dimen/switch_dialog_certificate_settings_min_height"
                    app:trackTint="@drawable/switchtrack_selector"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/linearlayout_dialog_certificate_settings_ok_cancel_padding_top"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageview_dialog_certificate_settings_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/label_dialog_certificate_settings_ok"
...
